Fixes issue with search cancel difficult to click on mobile

--- a/static/search.less
+++ b/static/search.less
@@ -39,6 +39,7 @@
 			background-repeat: no-repeat;
 			display:none;
 			opacity: .25;
+			margin-left: .5em;
 		}
 
 		.search{
@@ -46,7 +47,7 @@
 			background: transparent;
 			color: #000000;
 			border: none;
-			padding: 0 .5em;
+			padding: 0 0 0 .5em;
 			flex: 1;
 			.placeholder(@dark-border-color);
 			&:focus{
